- 전체 틀 나눔 작업  - Navigation Command 이벤트 연동

--- a/src/BicycleSharingSystem.Kiosk/Pages/Bike/Index.axaml
+++ b/src/BicycleSharingSystem.Kiosk/Pages/Bike/Index.axaml
@@ -3,6 +3,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="540" d:DesignHeight="895"
-             x:Class="BicycleSharingSystem.Kiosk.Views.HomeView">
-    <Image Source="avares://BicycleSharingSystem.Kiosk/Assets/BMW Logo.png"  Height="312" Width="312" ></Image>
+             x:Class="BicycleSharingSystem.Kiosk.Pages.Bike.Index">
+    <Border Padding="10, 50">
+        <StackPanel Spacing="10">
+            <TextBlock Text="OO 대여소"/>
+        </StackPanel>
+    </Border>
 </UserControl>
