--- a/src/BicycleSharingSystem.Kiosk/Pages/RentalOffice/Index.axaml
+++ b/src/BicycleSharingSystem.Kiosk/Pages/RentalOffice/Index.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"  d:DesignWidth="540" d:DesignHeight="895"  Background="Transparent"
-             x:Class="BicycleSharingSystem.Kiosk.Views.RentalOfficeView">
+             x:Class="BicycleSharingSystem.Kiosk.Pages.RentalOffice.Index">
     <Border Padding="10, 10">
         <StackPanel Orientation="Vertical" Spacing="10">
             <TextBox CornerRadius="5" Height="56" VerticalAlignment="Top" Watermark="원하시는 대여소를 입력해주세요." VerticalContentAlignment="Center"/>
