--- a/src/BicycleSharingSystem.Kiosk/Components/ServiceNoneButton.axaml
+++ b/src/BicycleSharingSystem.Kiosk/Components/ServiceNoneButton.axaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="using:BicycleSharingSystem.Kiosk.Components" 
         xmlns:i="https://github.com/projektanker/icons.avalonia">
-    <StyleInclude Source="../Styles/BaseStyle.axaml" />
+    <StyleInclude Source="NavigationButtonStyle.axaml" />
     <Design.PreviewWith>
         <Grid Background="White" Width="90" Height="90">
             <controls:ServiceNoneButton />
@@ -13,9 +13,9 @@
         <!-- Set Defaults -->
         <Setter Property="Template">
             <ControlTemplate>
-                <StackPanel Orientation="Vertical" VerticalAlignment="Center" Background="{TemplateBinding Background}" Width="90">
+                <StackPanel>
                     <i:Icon Value="mdi-wrench"/>
-                    <TextBlock Text="서비스 준비중" Classes="NavigationText"/>
+                    <TextBlock Text="서비스 준비중"/>
                 </StackPanel>
             </ControlTemplate>
         </Setter>
