--- a/src/BicycleSharingSystem.Kiosk/Components/NavigationBar.axaml
+++ b/src/BicycleSharingSystem.Kiosk/Components/NavigationBar.axaml
@@ -1,29 +1,53 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="using:BicycleSharingSystem.Kiosk.Components">
-    <StyleInclude Source="HomeButton.axaml"/>
-    <StyleInclude Source="RentalOfficeButton.axaml"/>
-    <StyleInclude Source="ServiceNoneButton.axaml"/>
+        xmlns:controls="using:BicycleSharingSystem.Kiosk.Components"     
+        xmlns:i="https://github.com/projektanker/icons.avalonia">
+    <StyleInclude Source="../Styles/BaseStyle.axaml"/>
     <Design.PreviewWith>
         <Grid RowDefinitions="27, *, 90, 38" Width="540" Background="#f5f5f5">
             <controls:NavigationBar Grid.Row="2" />
         </Grid>
     </Design.PreviewWith>
+    
+   <Styles.Resources>
+       <ControlTheme TargetType="Button" x:Key="NaviItem">
+           <Setter Property="Background" Value="Transparent"/>
+           <Setter Property="Template">
+               <ControlTemplate>
+                   <Border CornerRadius="5" 
+                           Background="{TemplateBinding Background}" 
+                           Width="90">
+                       <StackPanel Orientation="Vertical" 
+                                   VerticalAlignment="Center">
+                           <i:Icon Value="{TemplateBinding Tag}" 
+                                   FontSize="40"/>
+                           <TextBlock Text="{TemplateBinding Content}" 
+                                      Foreground="{StaticResource ColorBlack}" 
+                                      HorizontalAlignment="Center" FontWeight="Bold"/>
+                       </StackPanel>
+                   </Border>
+               </ControlTemplate>
+            </Setter>
+       </ControlTheme>
+   </Styles.Resources>
+    
 
     <Style Selector="controls|NavigationBar">
         <!-- Set Defaults -->
         <Setter Property="Template">
             <ControlTemplate>
                 <Border Background="White" CornerRadius="10 10 0 0" Padding="5" BorderBrush="DarkGray" BorderThickness="1">
-                    <UniformGrid Columns="5">
-                        <controls:HomeButton Command="{Binding HomeButtonCommand}"/>
-                        <controls:RentalOfficeButton Command="{Binding RentalOfficeButtonCommand}"/>
-                        <controls:ServiceNoneButton />
-                        <controls:ServiceNoneButton />
-                        <controls:ServiceNoneButton />
+                    <UniformGrid Columns="4">
+                        <Button Theme="{StaticResource NaviItem}" Tag="mdi-home" Content="처음화면" Command="{Binding HomeButtonCommand}" Classes="abc"/>
+                        <Button Theme="{StaticResource NaviItem}" Tag="mdi-bike" Content="대여소" Command="{Binding RentalOfficeButtonCommand}"/>
+                        <Button Theme="{StaticResource NaviItem}" Tag="mdi-wrench" Content="서비스 준비중"/>
+                        <Button Theme="{StaticResource NaviItem}" Tag="mdi-wrench" Content="서비스 준비중"/>
                     </UniformGrid>
                 </Border>
             </ControlTemplate>
         </Setter>
+        <Style Selector="^ /template/ Button:pointerover">
+            <Setter Property="Background" Value="#e6e6e6"></Setter>
+        </Style>
     </Style>
 </Styles>
