--- a/src/BicycleSharingSystem.Kiosk/MainWindow.axaml
+++ b/src/BicycleSharingSystem.Kiosk/MainWindow.axaml
@@ -8,6 +8,12 @@
         mc:Ignorable="d" d:DesignWidth="540" d:DesignHeight="960"
         x:Class="BicycleSharingSystem.Kiosk.MainWindow"
         x:DataType="vm:MainWindowViewModel"
+        Width="540" 
+        MaxWidth="540" 
+        MinWidth="540"
+        Height="960"
+        MaxHeight="960"
+        MinHeight="960"
         Icon="/Assets/avalonia-logo.ico" Background="#F9F9F9"
         Title="BicycleSharingSystem.Kiosk">
     <Window.Styles>
@@ -20,7 +26,11 @@
     </Design.DataContext>
     <Grid RowDefinitions="27, *, 90, 38">
        <components:TopBanner/>
-        <!-- <TransitioningContentControl Grid.Row="1"></TransitioningContentControl> -->
+        <TransitioningContentControl Grid.Row="1" Content="{Binding CurrentPage }">
+            <TransitioningContentControl.PageTransition>
+                <PageSlide Orientation="Vertical" Duration="0:00:00.500" />
+            </TransitioningContentControl.PageTransition>
+        </TransitioningContentControl>
        <components:NavigationBar Grid.Row="2"/>
        <components:BottomBanner Grid.Row="3"/>
     </Grid>
