--- a/src/BicycleSharingSystem.Kiosk/App.axaml
+++ b/src/BicycleSharingSystem.Kiosk/App.axaml
@@ -3,12 +3,14 @@
              x:Class="BicycleSharingSystem.Kiosk.App"
              xmlns:local="using:BicycleSharingSystem.Kiosk"
              RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+    <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
     <Application.DataTemplates>
-        <local:ViewLocator/>
+        <local:ViewLocator />
     </Application.DataTemplates>
-  
+    <Application.Resources>
+        <SolidColorBrush x:Key="ColorBlack">#252525</SolidColorBrush>
+    </Application.Resources>
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
