--- a/src/BicycleSharingSystem.Kiosk/MainWindow.axaml
+++ b/src/BicycleSharingSystem.Kiosk/MainWindow.axaml
@@ -1,37 +1,40 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:BicycleSharingSystem.Kiosk.ViewModels"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:sys="clr-namespace:System;assembly=System.Runtime"
-        xmlns:components="clr-namespace:BicycleSharingSystem.Kiosk.Components"
-        mc:Ignorable="d" d:DesignWidth="540" d:DesignHeight="960"
-        x:Class="BicycleSharingSystem.Kiosk.MainWindow"
-        x:DataType="vm:MainWindowViewModel"
-        Width="540" 
-        MaxWidth="540" 
-        MinWidth="540"
-        Height="960"
-        MaxHeight="960"
-        MinHeight="960"
-        Icon="/Assets/avalonia-logo.ico" Background="#F9F9F9"
-        Title="BicycleSharingSystem.Kiosk">
+<Window
+    Background="#F9F9F9"
+    Height="960"
+    Icon="/Assets/avalonia-logo.ico"
+    MaxHeight="960"
+    MaxWidth="540"
+    MinHeight="960"
+    MinWidth="540"
+    Title="BicycleSharingSystem.Kiosk"
+    Width="540"
+    d:DesignHeight="960"
+    d:DesignWidth="540"
+    mc:Ignorable="d"
+    x:Class="BicycleSharingSystem.Kiosk.MainWindow"
+    x:DataType="vm:MainWindowViewModel"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:components="clr-namespace:BicycleSharingSystem.Kiosk.Components"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="using:BicycleSharingSystem.Kiosk.ViewModels"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Window.Styles>
-        <StyleInclude Source="Components/TopBanner.axaml"/>
-        <StyleInclude Source="Components/NavigationBar.axaml"/>
-        <StyleInclude Source="Components/BottomBanner.axaml"/>
+        <StyleInclude Source="Components/TopBanner.axaml" />
+        <StyleInclude Source="Components/NavigationBar.axaml" />
+        <StyleInclude Source="Components/BottomBanner.axaml" />
     </Window.Styles>
     <Design.DataContext>
         <vm:MainWindowViewModel />
     </Design.DataContext>
     <Grid RowDefinitions="27, *, 90, 38">
-       <components:TopBanner/>
-        <TransitioningContentControl Grid.Row="1" Content="{Binding CurrentPage }">
+        <components:TopBanner />
+        <TransitioningContentControl Content="{Binding CurrentPage}" Grid.Row="1">
             <TransitioningContentControl.PageTransition>
-                <PageSlide Orientation="Vertical" Duration="0:00:00.500" />
+                <PageSlide Duration="0:00:00.500" Orientation="Vertical" />
             </TransitioningContentControl.PageTransition>
         </TransitioningContentControl>
-       <components:NavigationBar Grid.Row="2"/>
-       <components:BottomBanner Grid.Row="3"/>
+        <components:NavigationBar Grid.Row="2" />
+        <components:BottomBanner Grid.Row="3" />
     </Grid>
 </Window>
