--- a/src/BicycleSharingSystem.Kiosk/App.axaml
+++ b/src/BicycleSharingSystem.Kiosk/App.axaml
@@ -1,15 +1,17 @@
-<Application xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="BicycleSharingSystem.Kiosk.App"
-             xmlns:local="using:BicycleSharingSystem.Kiosk"
-             RequestedThemeVariant="Default">
-    <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+<Application
+    RequestedThemeVariant="Default"
+    x:Class="BicycleSharingSystem.Kiosk.App"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:local="using:BicycleSharingSystem.Kiosk"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <!--  "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options.  -->
 
     <Application.DataTemplates>
         <local:ViewLocator />
     </Application.DataTemplates>
     <Application.Resources>
         <SolidColorBrush x:Key="ColorBlack">#252525</SolidColorBrush>
+        <SolidColorBrush x:Key="ColorWhite">#D3D3D3</SolidColorBrush>
     </Application.Resources>
     <Application.Styles>
         <FluentTheme />
