--- a/src/BicycleSharingSystem.Kiosk/Components/BottomBanner.axaml
+++ b/src/BicycleSharingSystem.Kiosk/Components/BottomBanner.axaml
@@ -1,22 +1,28 @@
-<Styles xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="using:BicycleSharingSystem.Kiosk.Components"
-        xmlns:sys="clr-namespace:System;assembly=System.Runtime">
+<Styles
+    xmlns="https://github.com/avaloniaui"
+    xmlns:controls="using:BicycleSharingSystem.Kiosk.Components"
+    xmlns:sys="clr-namespace:System;assembly=System.Runtime"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Design.PreviewWith>
-        <Grid RowDefinitions="27, *, 90, 38" Width="540" Background="#f5f5f5">
-            <controls:BottomBanner Grid.Row="3"/>
+        <Grid
+            Background="#F9F9F9"
+            RowDefinitions="27, *, 90, 38"
+            Width="540">
+            <controls:BottomBanner Grid.Row="3" />
         </Grid>
     </Design.PreviewWith>
 
     <Style Selector="controls|BottomBanner">
-        <!-- Set Defaults -->
         <Setter Property="Template">
             <ControlTemplate>
-                <Border Padding="10 ,0" Grid.Row="2" Background="#202020">
-                    <TextBlock Foreground="#D3D3D3" VerticalAlignment="Center">
-                        <Run Text="{Binding Source={x:Static sys:DateTime.Now}, 
-                     StringFormat='{}{0:yyyy.MM.dd HH:mm}', Mode=OneWay}"/>
-                    </TextBlock>
+                <Border
+                    Background="{StaticResource ColorBlack}"
+                    Grid.Row="2"
+                    Padding="10,0">
+                    <TextBlock
+                        Foreground="{StaticResource ColorWhite}"
+                        Text="{Binding Source={x:Static sys:DateTime.Now}, StringFormat='{}{0:yyyy.MM.dd HH:mm}', Mode=OneWay}"
+                        VerticalAlignment="Center" />
                 </Border>
             </ControlTemplate>
         </Setter>
