--- a/src/BicycleSharingSystem.Kiosk/manual/Section.02/BicycleSharingSystem-avaloniaTemplate/Components/TopBanner.axaml
+++ b/src/BicycleSharingSystem.Kiosk/manual/Section.02/BicycleSharingSystem-avaloniaTemplate/Components/TopBanner.axaml
@@ -17,8 +17,29 @@
         <Setter Property="Template">
             <ControlTemplate>
                 <Grid Background="White" ColumnDefinitions="95,*">
+                    <Grid.Styles>
+                        <Style Selector="TextBlock">
+                            <Setter Property="VerticalAlignment" Value="Center" />
+                            <Setter Property="FontSize" Value="15" />
+                        </Style>
+                        <Style Selector="TextBlock.Message">
+                            <Style.Animations>
+                                <Animation
+                                    Delay="0:0:1"
+                                    Duration="0:0:15"
+                                    IterationCount="INFINITE">
+                                    <KeyFrame Cue="0%">
+                                        <Setter Property="TranslateTransform.X" Value="540" />
+                                    </KeyFrame>
+                                    <KeyFrame Cue="100%">
+                                        <Setter Property="TranslateTransform.X" Value="-540" />
+                                    </KeyFrame>
+                                </Animation>
+                            </Style.Animations>
+                        </Style>
+                    </Grid.Styles>
                     <Border Grid.Column="1" Padding="10,0">
-                        <TextBlock Text="BMW와 함께 하는 안전한 라이딩" />
+                        <TextBlock Classes="Message" Text="BMW와 함께 하는 안전한 라이딩" />
                     </Border>
                     <Label
                         Background="{StaticResource ColorBlack}"
